nobase_include_HEADERS = aftermath/core/ansi_extras.h \
	aftermath/core/arithmetic.h \
	aftermath/core/array_collection.h \
	aftermath/core/array_registry.h \
	aftermath/core/aux.h \
	aftermath/core/base_types.h \
	aftermath/core/bits.h \
	aftermath/core/bitvector.h \
	aftermath/core/bsearch.h \
	aftermath/core/buffer.h \
	aftermath/core/contrib/linux-kernel/kernel.h \
	aftermath/core/contrib/linux-kernel/list.h \
	aftermath/core/contrib/linux-kernel/poison.h \
	aftermath/core/contrib/linux-kernel/rbtree_augmented.h \
	aftermath/core/contrib/linux-kernel/rbtree.h \
	aftermath/core/contrib/linux-kernel/stddef.h \
	aftermath/core/contrib/linux-kernel/types.h \
	aftermath/core/contrib/linux-kernel/userspace.h \
	aftermath/core/convert.h \
	aftermath/core/counter_description_array.h \
	aftermath/core/counter_event_array.h \
	aftermath/core/counter_event_array_collection.h \
	aftermath/core/default_array_registry.h \
	aftermath/core/default_trace_array_registry.h \
	aftermath/core/dfg_builtin_node_impl.h \
	aftermath/core/dfg_builtin_node_types.h \
	aftermath/core/dfg_builtin_type_impl.h \
	aftermath/core/dfg_builtin_types.h \
	aftermath/core/dfg_buffer.h \
	aftermath/core/dfg_graph.h \
	aftermath/core/dfg_node.h \
	aftermath/core/dfg_node_type_registry.h \
	aftermath/core/dfg_schedule.h \
	aftermath/core/dfg_type.h \
	aftermath/core/dfg_type_registry.h \
	aftermath/core/dfg/nodes/double_constant.h \
	aftermath/core/dfg/nodes/duration_to_string.h \
	aftermath/core/dfg/nodes/duration_to_uint64.h \
	aftermath/core/dfg/nodes/event_mapping_common.h \
	aftermath/core/dfg/nodes/hierarchy_attributes.h \
	aftermath/core/dfg/nodes/hierarchy_node_attributes.h \
	aftermath/core/dfg/nodes/hierarchy_node_selector.h \
	aftermath/core/dfg/nodes/hierarchy_selector.h \
	aftermath/core/dfg/nodes/histogram_attributes.h \
	aftermath/core/dfg/nodes/histogram_builder.h \
	aftermath/core/dfg/nodes/int_constant.h \
	aftermath/core/dfg/nodes/interval_attributes.h \
	aftermath/core/dfg/nodes/interval_duration.h \
	aftermath/core/dfg/nodes/pair_timestamp_hierarchy_node_attributes.h \
	aftermath/core/dfg/nodes/state_event_attributes.h \
	aftermath/core/dfg/nodes/string_concat.h \
	aftermath/core/dfg/nodes/string_format.h \
	aftermath/core/dfg/nodes/timestamp_to_string.h \
	aftermath/core/dfg/nodes/timestamp_to_uint64.h \
	aftermath/core/dfg/nodes/trace.h \
	aftermath/core/dfg/types/bool.h \
	aftermath/core/dfg/types/double.h \
	aftermath/core/dfg/types/duration.h \
	aftermath/core/dfg/types/generic.h \
	aftermath/core/dfg/types/histogram.h \
	aftermath/core/dfg/types/histogram_data.h \
	aftermath/core/dfg/types/interval.h \
	aftermath/core/dfg/types/pair_timestamp_hierarchy_node.h \
	aftermath/core/dfg/types/string.h \
	aftermath/core/dfg/types/timestamp.h \
	aftermath/core/dfg/types/int.h \
	aftermath/core/event_mapping.h \
	aftermath/core/event_collection.h \
	aftermath/core/event_collection_array.h \
	aftermath/core/frame_type_registry.h \
	aftermath/core/hierarchy.h \
	aftermath/core/hierarchy_array.h \
	aftermath/core/index_to_id_map.h \
	aftermath/core/interval.h \
	aftermath/core/interval_array.h \
	aftermath/core/in_memory.h \
	aftermath/core/in_memory_dfg_node_types.h \
	aftermath/core/in_memory_dfg_types.h \
	aftermath/core/in_memory_inline.h \
	aftermath/core/io_context.h \
	aftermath/core/io_error.h \
	aftermath/core/io_hierarchy_context.h \
	aftermath/core/measurement_interval_array.h \
	aftermath/core/object_notation.h \
	aftermath/core/on_disk.h \
	aftermath/core/on_disk_default_type_ids.h \
	aftermath/core/on_disk_meta.h \
	aftermath/core/on_disk_structs.h \
	aftermath/core/on_disk_write_to_buffer.h \
	aftermath/core/openmp.h \
	aftermath/core/openmp_for_loop_instance_array.h \
	aftermath/core/openmp_for_loop_type_array.h \
	aftermath/core/openmp_iteration_period_array.h \
	aftermath/core/openmp_iteration_set_array.h \
	aftermath/core/openmp_task_instance_array.h \
	aftermath/core/openmp_task_period_array.h \
	aftermath/core/openmp_task_type_array.h \
	aftermath/core/openstream_task_instance_array.h \
	aftermath/core/openstream_task_period_array.h \
	aftermath/core/openstream_task_type_array.h \
	aftermath/core/parser.h \
	aftermath/core/prng.h \
	aftermath/core/ptr.h \
	aftermath/core/qsort.h \
	aftermath/core/safe_alloc.h \
	aftermath/core/state_description_array.h \
	aftermath/core/state_event_array.h \
	aftermath/core/statistics/histogram.h \
	aftermath/core/statistics/interval.h \
	aftermath/core/tensorflow_node_array.h \
	aftermath/core/tensorflow_node_execution_array.h \
	aftermath/core/timestamp.h \
	aftermath/core/trace.h \
	aftermath/core/typed_array.h \
	aftermath/core/typed_list.h \
	aftermath/core/typed_rbtree.h \
	aftermath/core/write_buffer.h

aftermath/core/base_types.h: $(top_builddir)/src/base_types.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/on_disk.h: $(top_builddir)/src/on_disk.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/on_disk_default_type_ids.h: $(top_builddir)/src/on_disk_default_type_ids.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/on_disk_meta.h: $(top_builddir)/src/on_disk_meta.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/on_disk_structs.h: $(top_builddir)/src/on_disk_structs.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/on_disk_write_to_buffer.h: $(top_builddir)/src/on_disk_write_to_buffer.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/in_memory.h: $(top_builddir)/src/in_memory.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/in_memory_dfg_node_types.h: $(top_builddir)/src/in_memory_dfg_node_types.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/in_memory_dfg_types.h: $(top_builddir)/src/in_memory_dfg_types.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@

aftermath/core/in_memory_inline.h: $(top_builddir)/src/in_memory_inline.h
	$(MKDIR_P) aftermath/core
	ln -sfr $< $@
