nobase_include_HEADERS = aftermath/render/cairo_extras.h \
	aftermath/render/color_map.h \
	aftermath/render/timeline/common_layers.h \
	aftermath/render/timeline/layer.h \
	aftermath/render/timeline/layers/axes.h \
	aftermath/render/timeline/layers/background.h \
	aftermath/render/timeline/layers/hierarchy.h \
	aftermath/render/timeline/layers/lane.h \
	aftermath/render/timeline/renderer.h
