nobase_include_HEADERS = aftermath/render/cairo_extras.h \
	aftermath/render/color_map.h \
	aftermath/render/dfg/dfg_coordinate_mapping.h \
	aftermath/render/dfg/nodes/builtin_nodes.h \
	aftermath/render/dfg/nodes/rgba_constant.h \
	aftermath/render/dfg/nodes/timeline/layers/axes.h \
	aftermath/render/dfg/nodes/timeline/layers/background.h \
	aftermath/render/dfg/nodes/timeline/layers/hierarchy.h \
	aftermath/render/dfg/nodes/timeline/layers/state.h \
	aftermath/render/dfg/nodes/timeline/layers/tensorflow_node_execution.h \
	aftermath/render/dfg/renderer.h \
	aftermath/render/dfg/timeline_layer_common.h \
	aftermath/render/dfg/types/builtin_types.h \
	aftermath/render/dfg/types/rgba.h \
	aftermath/render/histogram/renderer.h \
	aftermath/render/kdtree/renderer.h \
	aftermath/render/recttree/renderer.h \
	aftermath/render/telamon/candidate_tree_renderer.h \
	aftermath/render/timeline/common_layers.h \
	aftermath/render/timeline/layer.h \
	aftermath/render/timeline/layers/axes.h \
	aftermath/render/timeline/layers/background.h \
	aftermath/render/timeline/layers/hierarchy.h \
	aftermath/render/timeline/layers/lane.h \
	aftermath/render/timeline/layers/measurement_intervals.h \
	aftermath/render/timeline/layers/interval.h \
	aftermath/render/timeline/layers/selection.h \
	aftermath/render/timeline/renderer.h \
	aftermath/render/tree_layout.h
